= Changelog

This document provides information about changes that have been made for each new version
of the Signature Service Transaction Signing Library.

== Version 2601.2

=== Changes

* Added runtime dependency eu.europa.ec.joinup.sd-dss:dss-cms-object to project.

== Version 2601.1

=== Upgrade notes
The project now targets Java 21.

=== Changes

* Upgraded Gradle to 8.14.3.

== Version 2512.1

=== Enhancements

* The eu.europa.ec.joinup.sd-dss library upgraded to version 6.3.
* Default validation policy file that comes with this library updated to match the new eu.europa.ec.joinup.sd-dss version.
* Removed temporary security-related dependency overrides, as they are no longer required.
* Dependency upgrades:
** `org.spockframework:spock-bom` to `2.4-groovy-3.0`

== Version 2509.1

=== Upgrade notes
This release contains no breaking changes.

=== Changes

* Upgraded Gradle to `7.6.6`
* Vulnerability CVE-2025-48924 fixed via:
** commons-lang3: upgraded to 3.18.0

== Version 2506.1

=== Upgrade notes
NOTE: This release includes changes in preparation for migrating to Java 21 in Q4 2025.

=== Changes
* Upgraded Gradle to `7.6.5`
** Updated Gradle Wrapper files (`gradlew`, `gradlew.bat`, `gradle-wrapper.jar`) to align with the configured version.
* Removed unrelated internal build logic from `build.gradle`.

* Upgraded Spock Framework Core Module to `2.4-M6-groovy-3.0`.
* Upgraded SLF4J to `2.0.17`.
* Upgraded Apache HttpClient to `5.5`.
* Upgraded JSON in Java to `20250517`.

* Improvements to SignTool CLI:
** Added support for explicitly setting the signature algorithm.

* Security:
** Fixed vulnerability `CVE-2025-27820` (transitive from `eu.europa.ec.joinup.sd-dss:dss-service`) by upgrading dependencies:
*** `org.apache.httpcomponents.client5:httpclient5` → `5.5`
*** `org.apache.httpcomponents.core5:httpcore5` → `5.3.4`
*** `org.apache.httpcomponents.core5:httpcore5-h2` → `5.3.4`

== Version 2503.1

=== Upgrade notes
This release contains *breaking changes*.